objects/UserProvFineEntitlement__c.object
<CustomObject>
    <fields>
        <fullName>BillingAddress__c</fullName>
        <formula>Entitled_Account__r.BillingStreet &amp; &apos;, &apos; &amp; Entitled_Account__r.BillingCity &amp; &apos;, &apos; &amp; Entitled_Account__r.BillingState</formula>
        <label>BillingAddress</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Entitled_Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Entitled Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Provisioned_Entitlements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ParentApp__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Application</label>
        <referenceTo>Application__c</referenceTo>
        <relationshipLabel>UP Fine Grain Entitlements</relationshipLabel>
        <relationshipName>Fine_Grained_Entitlements</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Related_SF_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related SF User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Fine_Grained_Entitlements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>UPA_Parent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related UPA</label>
        <referenceTo>UserProvAccount</referenceTo>
        <relationshipLabel>UP Fine Grain Entitlements</relationshipLabel>
        <relationshipName>Fine_Grained_Entitlements</relationshipName>
        <type>Lookup</type>
    </fields>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>BLink_FG_UserProvFineEntitlement</fullName>
        <filterScope>Queue</filterScope>
        <label>BLink FG</label>
        <queue>BLink_FG</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>DOD_MP_UserProvFineEntitlement</fullName>
        <filterScope>Queue</filterScope>
        <label>DOD_MP</label>
        <queue>DOD_MP</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>FOLO_FG_UserProvFineEntitlement</fullName>
        <filterScope>Queue</filterScope>
        <label>FOLO FG</label>
        <queue>FOLO_FG</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Feed_FG_UserProvFineEntitlement</fullName>
        <filterScope>Queue</filterScope>
        <label>Feed_FG</label>
        <queue>Feed_FG</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Invoice_Mgmt_FG_UserProvFineEntitlement</fullName>
        <filterScope>Queue</filterScope>
        <label>Invoice Mgmt FG</label>
        <queue>Invoice_Mgmt_FG</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Seed_FG_UserProvFineEntitlement</fullName>
        <filterScope>Queue</filterScope>
        <label>Seed FG</label>
        <queue>Seed_FG</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
</CustomObject>